--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Main capion</h1>
+    <h1>Main caption</h1>
     <div class="col-lg-4 col-md-6 col-sm-12">
         <div class="box col-lg-12 col-md-12 col-sm-12">
             <div class="col-lg-4 col-md-4 col-sm-3 caption1">
